# DungeonAI

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
data/ontology/: canonical_entities.json  dnd5e_schema.json
src/: __init__.py  models.py
src/dnd_manager/: __init__.py
src/dnd_manager/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
src/dnd_manager/dm/: __init__.py  dice.py  memory.py  orchestrator.py  prompts.py
src/dnd_manager/dm/tools/: __init__.py  base.py
src/dnd_manager/engine/: __init__.py  ai_agent.py  dice.py  game_loop.py  loop.py  tools.py  turn_manager.py
src/dnd_manager/ingestion/: __init__.py  entity_resolver.py  hybrid_retriever.py  knowledge_graph.py  module_loader.py  ocr.py  ontology.py  pdf_parser.py  rag_pipeline.py  rag_store.py  rules_loader.py  triple_extractor.py  universal_loader.py  vision_parser.py
src/dnd_manager/models/: __init__.py  campaign.py  character.py  combat.py  components.py  ecs.py  entities.py  enums.py  equipment.py  game_state.py  progression.py
src/dnd_manager/storage/: __init__.py  database.py
src/dnd_manager/ui/: __init__.py  app.py  components.py  theme.py
src/dnd_manager/ui/components/: __init__.py  pdf_export.py
src/dnd_manager/ui/pages/: 1_Library.py  2_Characters.py  3_Sessions.py  4_Play.py  5_Settings.py
src/dnd_manager/ui/pages/characters/: __init__.py  constants.py  creator.py  details.py  editor.py  list_view.py  pdf_import.py  state.py
tests/: conftest.py
tests/integration/: test_character_flow.py  test_combat_flow.py  test_session_persistence.py
tests/unit/core/: test_config.py  test_exceptions.py
tests/unit/engine/: test_dice.py  test_loop.py  test_tools.py
tests/unit/ingestion/: test_ingestion.py  test_knowledge_graph.py
tests/unit/models/: test_components.py  test_entities.py  test_game_state.py
